tests/error/type_errors/while_not_bool_functional.py
from guppylang.decorator import guppy


@compile_guppy
def foo() -> int:
    _@functional
    while 42:
        pass
    return 0
